...
            self.navigationController?.pushViewController(detailVC, animated: true)
        })
        return UIHostingController(rootView: view)
    }()
    private lazy var networkVC = NetworkDebugViewController()
    private lazy var manifestCacheTestVC: UIViewController = {
        ManifestCacheTestViewController()
    }()
    private lazy var manifestTestCasesVC: UIViewController = {
        ManifestTestCasesViewController()
    }()

    override func viewDidLoad() {
...
